--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -9,5 +9,14 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
+    <section>
+      <h1>diagram</h1>
+    </section>
+    <section>
+      <h2>data/text</h2>
+    </section>
+    <section>
+      <h3>graph</h3>
+    </section>
   </body>
 </html>
