--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triumf Demo</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script src="data.js"></script>
     <section>
       <h1>diagram</h1>
     </section>
