--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -7,12 +7,20 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="data.js"></script>
+    <script defer src="data.js"></script>
     <section>
       <h1>diagram</h1>
     </section>
     <section>
       <h2>data/text</h2>
+      <table>
+        <thead>
+          <th>Name</th>
+          <th>Value</th>
+          <th>Units</th>
+        </thead>
+        <tbody></tbody>
+      </table>
     </section>
     <section>
       <h3>graph</h3>
