--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
-    <div id="app"></div>
     <script defer src="data.js"></script>
+    <header>
+      <img src="./public/TRIUMF_logo_white_blue.jpg" class="logo"/>
+    </header>
+    <main>
     <section>
       <h1>diagram</h1>
+      <img src="./public/sciencetube.png"/>
     </section>
     <section>
       <h2>data/text</h2>
@@ -19,13 +22,15 @@
         <thead>
           <th>Name</th>
           <th>Value</th>
+          <th>Desc</th>
           <th>Units</th>
         </thead>
         <tbody></tbody>
       </table>
-    </section>
-    <section>
+
       <h3>graph</h3>
+      <img src='./public/chart.png' class='graph'/>
     </section>
+  </main>
   </body>
 </html>
