better logo and size

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -15,7 +15,7 @@
     ></script>
     <script defer src="data.js"></script>
     <header>
-      <img src="./public/TRIUMF_Logo_Blue.jpg" class="logo" />
+      <img src="./public/main-logo.png" class="logo" />
     </header>
     <main>
       <section>
