--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Triumf Demo</title>
+    <title>OLIS Status</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Open Sans"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="./public/favicon.ico">
   </head>
 
   <body>
@@ -29,7 +30,7 @@
       </nav>
     </header>
     <main>
-      
+
       <!-- diagram Image -->
       <section>
         <h1>Particle Accelerator</h1>
