--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -26,7 +26,7 @@
           Canada's particle accelerator centre <br />Centre canadien
           d'accélération des particules
         </p>
-        <h2>Current Time: 9:23:23</h2>
+        <h2 class="time"></h2>
       </nav>
     </header>
     <main>
