--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -11,9 +11,11 @@
 </head>
 
 <body>
-  <script defer src="./chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
   <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script defer src="./data.js"></script>
+
   <header>
     <nav>
       <img src="./public/main-logo.png" class="logo" />
@@ -44,11 +46,89 @@
           <th>Desc</th>
           <th>Units</th>
         </thead>
-        <tbody></tbody>
+        <tbody>
+          <tr class="filler">
+            <td>
+
+              loading
+
+            </td>
+
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+          <tr class="filler">
+            <td>
+              loading
+            </td>
+          </tr>
+        </tbody>
       </table>
       <!-- END DATA information -->
-      <h4>Voltage Timeline</h4>
-      <canvas id="myChart" width="400" height="400"></canvas>
+      <canvas id="myChart" height="100%" width="auto"></canvas>
     </section>
 
     <!-- status information -->
@@ -90,6 +170,7 @@
 
     <!-- END status information -->
   </main>
+  <script defer src="./chart.js"></script>
 </body>
 
 </html>
