layout on desktop

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -38,135 +38,132 @@
 
 
     <section>
-      <!-- DATA information -->
-      <table>
-        <thead>
-          <th>Name</th>
-          <th>Value</th>
-          <th>Desc</th>
-          <th>Units</th>
-        </thead>
-        <tbody>
-          <tr class="filler">
-            <td>
+      <div class="subSection">
+        <!-- DATA information -->
+        <table>
+          <thead>
+            <th>Name</th>
+            <th>Value</th>
+            <th>Units</th>
+          </thead>
+          <tbody>
+            <tr class="filler">
+              <td>
 
-              loading
+                loading
 
-            </td>
+              </td>
 
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-          <tr class="filler">
-            <td>
-              loading
-            </td>
-          </tr>
-        </tbody>
-      </table>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+            <tr class="filler">
+              <td>
+                loading
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="smallContainer">
+          <div class="light">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            Beam Status
+          </div>
+          <div class="light">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            Station Status
+          </div>
+          <div class="light">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            Coffee Status
+          </div>
+
+
+
+          <div width="500px">
+            <a class="twitter-timeline" data-width="auto" data-height="350px"
+              href="https://twitter.com/kcharlto?ref_src=twsrc%5Etfw">Tweets by kcharlto</a>
+          </div>
+        </div>
+      </div>
       <!-- END DATA information -->
       <canvas id="myChart" height="100%" width="auto"></canvas>
     </section>
+    </section>
 
     <!-- status information -->
-    <section>
-
-      <div class="light">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        Aggressive Status
-      </div>
-      <div class="light">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        Neon Button
-      </div>
-      <div class="light">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        Neon Button
-      </div>
-      <div class="light">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        Neon Button
-      </div>
-      <div width="500px">
-        <a class="twitter-timeline" data-width="500" data-height="300"
-          href="https://twitter.com/kcharlto?ref_src=twsrc%5Etfw">Tweets by kcharlto</a>
-      </div>
-    </section>
 
     <!-- END status information -->
   </main>
