--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -127,36 +127,36 @@
             </tr>
           </tbody>
         </table>
+        <!-- 
         <div class="smallContainer">
           <div class="light">
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            Beam Status
+            Beam Online
           </div>
           <div class="light">
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            Station Status
+            Station Online
           </div>
           <div class="light">
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            Coffee Status
+            Coffee Online
           </div>
+-->
 
-
-
-          <div width="500px">
-            <a class="twitter-timeline" data-width="auto" data-height="350px"
-              href="https://twitter.com/kcharlto?ref_src=twsrc%5Etfw">Tweets by kcharlto</a>
-          </div>
+        <div class="smallContainer">
+          <a class="twitter-timeline" data-width="auto" data-height="100%"
+            href="https://twitter.com/kcharlto?ref_src=twsrc%5Etfw">Tweets by kcharlto</a>
         </div>
+      </div>
       </div>
       <!-- END DATA information -->
       <canvas id="myChart" height="100%" width="auto"></canvas>
