layout for status icons

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -19,7 +19,7 @@
   <header>
     <nav>
       <img src="./public/main-logo.png" class="logo" />
-      <p class="nav-text">
+      <p class="navText">
         Canada's particle accelerator centre <br />Centre canadien
         d'accélération des particules
       </p>
@@ -30,8 +30,10 @@
 
     <!-- diagram Image -->
     <section>
-      <h2 class="sectionTitle">Particle Accelerator</h2>
-      <img src="./public/sciencetube.png" class="diagram-img" />
+      <div class="imageLabelContainer">
+        <h2 class="sectionTitle">Particle Accelerator</h2>
+        <img src="./public/sciencetube.png" class="diagram-img" />
+      </div>
     </section>
     <!-- End Diagram Image -->
 
@@ -160,6 +162,14 @@
       </div>
       <!-- END DATA information -->
       <canvas id="myChart" height="100%" width="auto"></canvas>
+      <div class="subSection">
+        <p>status icons and online/offline here</p>
+        <p>status icons and online/offline here</p>
+        <p>status icons and online/offline here</p>
+        <p>status icons and online/offline here</p>
+        <p>status icons and online/offline here</p>
+
+      </div>
     </section>
     </section>
 
