--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>OLIS Status</title>
   <link rel="stylesheet" href="./style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Open Sans" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="./public/favicon.ico">
 </head>
 
@@ -19,7 +21,7 @@
   <header>
     <nav>
       <img src="./public/main-logo.png" class="logo" />
-      <p class="nav-text">
+     <p class="nav-text">
         Canada's particle accelerator centre <br />Centre canadien
         d'accélération des particules
       </p>
@@ -33,6 +35,7 @@
       <h2 class="sectionTitle">Particle Accelerator</h2>
       <img src="./public/sciencetube.png" class="diagram-img" />
     </section>
+    
     <!-- End Diagram Image -->
 
 
