--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -7,8 +7,10 @@
   <title>OLIS Status</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&display=swap"
+    rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="./public/favicon.ico">
 </head>
 
@@ -21,11 +23,7 @@
   <header>
     <nav>
       <img src="./public/main-logo.png" class="logo" />
-<<<<<<< HEAD
-     <p class="nav-text">
-=======
       <p class="navText">
->>>>>>> c265dc883324facd43a603b7d0a05a2c035a8a9a
         Canada's particle accelerator centre <br />Centre canadien
         d'accélération des particules
       </p>
@@ -41,7 +39,7 @@
         <img src="./public/sciencetube.png" class="diagram-img" />
       </div>
     </section>
-    
+
     <!-- End Diagram Image -->
 
 
