diagram and layout, removed unused js

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -36,7 +36,7 @@
     <section>
       <div class="imageLabelContainer">
         <h2 class="sectionTitle">Particle Accelerator</h2>
-        <img src="./public/sciencetube.png" class="diagram-img" />
+        <img src="./public/diagram.svg" class="diagram-img" />
       </div>
     </section>
 
@@ -54,7 +54,7 @@
             <th>Units</th>
           </thead>
           <tbody>
-            <tr class="filler">
+            <tr class="original">
               <td>
 
                 loading
@@ -62,72 +62,72 @@
               </td>
 
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
             </tr>
-            <tr class="filler">
+            <tr class="original">
               <td>
                 loading
               </td>
