--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -36,6 +36,8 @@
     <section>
       <div class="imageLabelContainer">
         <h2 class="sectionTitle">Particle Accelerator</h2>
+        <label class="diagramLabel">Beam Source: $SIS</label>
+        <label class="diagramLabel2">Beam Status: $ON</label>
         <img src="./public/diagram.svg" class="diagram-img" />
       </div>
     </section>
@@ -134,31 +136,6 @@
             </tr>
           </tbody>
         </table>
-        <!-- 
-        <div class="smallContainer">
-          <div class="light">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            Beam Online
-          </div>
-          <div class="light">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            Station Online
-          </div>
-          <div class="light">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            Coffee Online
-          </div>
--->
-
         <div class="smallContainer">
           <a class="twitter-timeline" data-width="auto" data-height="100%"
             href="https://twitter.com/kcharlto?ref_src=twsrc%5Etfw">Tweets by kcharlto</a>
@@ -167,14 +144,6 @@
       </div>
       <!-- END DATA information -->
       <canvas id="myChart" height="100%" width="auto"></canvas>
-      <div class="subSection">
-        <p>status icons and online/offline here</p>
-        <p>status icons and online/offline here</p>
-        <p>status icons and online/offline here</p>
-        <p>status icons and online/offline here</p>
-        <p>status icons and online/offline here</p>
-
-      </div>
     </section>
     </section>
 
