changed twitter to dr charles

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -138,7 +138,7 @@
         </table>
         <div class="smallContainer">
           <a class="twitter-timeline" data-width="auto" data-height="100%"
-            href="https://twitter.com/kcharlto?ref_src=twsrc%5Etfw">Tweets by kcharlto</a>
+            href="https://twitter.com/crjcharles">Tweets by kcharlto</a>
         </div>
       </div>
       </div>
