--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -24,8 +24,7 @@
     <nav>
       <img src="./public/main-logo.png" class="logo" />
       <p class="navText">
-        Canada's particle accelerator centre <br />Centre canadien
-        d'accélération des particules
+        Off-Line Ion Source (OLIS)
       </p>
       <h2 class="time"></h2>
     </nav>
@@ -138,7 +137,7 @@
         </table>
         <div class="smallContainer">
           <a class="twitter-timeline" data-width="auto" data-height="100%"
-            href="https://twitter.com/kcharlto?ref_src=twsrc%5Etfw">Tweets by kcharlto</a>
+            href="https://twitter.com/crjcharles?ref_src=twsrc%5Etfw">Tweets by crjcharles</a>
         </div>
       </div>
       </div>
