added live chart functionaliy, very beta

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -44,6 +44,10 @@
 
     <!-- End Diagram Image -->
 
+    <!-- Sneaky Data -->
+<div id="graph_data"></div>
+    <!-- END Sneaky Data -->
+
 
 
     <section>
