beam source and status

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -35,8 +35,8 @@
     <section>
       <div class="imageLabelContainer">
         <h2 class="sectionTitle">Particle Accelerator</h2>
-        <label class="diagramLabel">Beam Source: $SIS</label>
-        <label class="diagramLabel2">Beam Status: $ON</label>
+        <label class="diagramLabelBeamSource">Beam Source: $SIS</label>
+        <label class="diagramLabelBeamStatus">Beam Status: $ON</label>
         <img src="./public/diagram.svg" class="diagram-img" />
       </div>
     </section>
@@ -44,7 +44,7 @@
     <!-- End Diagram Image -->
 
     <!-- Sneaky Data -->
-<div id="graph_data"></div>
+    <div id="graph_data"></div>
     <!-- END Sneaky Data -->
 
 
