--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -35,8 +35,8 @@
     <section>
       <div class="imageLabelContainer">
         <h2 class="sectionTitle">Particle Accelerator</h2>
-        <label class="diagramLabelBeamSource">Beam Source: $SIS</label>
-        <label class="diagramLabelBeamStatus">Beam Status: $ON</label>
+        <label class="diagramLabelBeamSource">Beam Source: </label>
+        <label class="diagramLabelBeamStatus">Beam Status: </label>
         <img src="./public/diagram.svg" class="diagram-img" />
       </div>
     </section>
