--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -54,18 +54,18 @@
         <!-- DATA information -->
         <table>
           <thead>
+            <th>Source</th>
             <th>Name</th>
             <th>Value</th>
             <th>Units</th>
           </thead>
           <tbody>
-            <tr class="original">
+            <tr class="original" style="background-color: light-green; border-bottom: 0px">
               <td>
 
                 loading
 
               </td>
-
             </tr>
             <tr class="original">
               <td>
