--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -139,9 +139,10 @@
             </tr>
           </tbody>
         </table>
-        <div class="smallContainer">
-          <a class="twitter-timeline" data-width="auto" data-height="100%"
-            href="https://twitter.com/crjcharles?ref_src=twsrc%5Etfw">Tweets by crjcharles</a>
+        <div class="smallContainer" style="overflow: scroll;">
+          <a class="twitter-timeline" href="https://twitter.com/crjcharles?ref_src=twsrc%5Etfw"
+            style="height:100%">Tweets by crjcharles</a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
       </div>
