primed data mapping func for rounding

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -60,7 +60,7 @@
             <th>Units</th>
           </thead>
           <tbody>
-            <tr class="original" style="background-color: light-green; border-bottom: 0px">
+            <!-- <tr class="original" style="background-color: light-green; border-bottom: 0px">
               <td>
 
                 loading
@@ -121,22 +121,8 @@
               <td>
                 loading
               </td>
-            </tr>
-            <tr class="original">
-              <td>
-                loading
-              </td>
-            </tr>
-            <tr class="original">
-              <td>
-                loading
-              </td>
-            </tr>
-            <tr class="original">
-              <td>
-                loading
-              </td>
-            </tr>
+            </tr> -->
+  
           </tbody>
         </table>
         <div class="smallContainer" style="overflow: scroll;">
@@ -155,7 +141,10 @@
 
     <!-- END status information -->
   </main>
+  <footer>HELLO THIS IS THE FOOTER</footer>
   <script defer src="./chart.js"></script>
+  
 </body>
+
 
 </html>
