--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -55,10 +55,12 @@
         <table>
           <thead>
             <th>Source</th>
+            <th>Name</th>
             <th>Value</th>
             <th>Units</th>
           </thead>
           <tbody>
+          
             <!-- <tr class="original" style="background-color: light-green; border-bottom: 0px">
               <td>
 
