twitter font size + chart goes 15 minutes

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -60,7 +60,7 @@
             <th>Units</th>
           </thead>
           <tbody>
-          
+
             <!-- <tr class="original" style="background-color: light-green; border-bottom: 0px">
               <td>
 
@@ -123,10 +123,10 @@
                 loading
               </td>
             </tr> -->
-  
+
           </tbody>
         </table>
-        <div class="smallContainer" style="overflow: scroll;">
+        <div class="smallContainer" id="twitterWidget" style="overflow: scroll;">
           <a class="twitter-timeline" href="https://twitter.com/crjcharles?ref_src=twsrc%5Etfw"
             style="height:100%">Tweets by crjcharles</a>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -144,7 +144,7 @@
   </main>
   <footer>HELLO THIS IS THE FOOTER</footer>
   <script defer src="./chart.js"></script>
-  
+
 </body>
 
 
