--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -37,7 +37,7 @@
         <h2 class="sectionTitle">Particle Accelerator</h2>
         <label class="diagramLabelBeamSource">Beam Source: Pending</label>
         <label class="diagramLabelBeamStatus">Beam Status: Pending</label>
-        <img src="./public/diagram.svg" class="diagram-img" />
+        <img src="./public/animated_diagram.svg" class="diagram-img" />
       </div>
     </section>
 
