--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -78,7 +78,7 @@
 
     <!-- END status information -->
   </main>
-  <footer>HELLO THIS IS THE FOOTER</footer>
+  <footer><a href="https://github.com/Filet26/TRIUMF_442_HLA_2">Created by a team of students at BCIT</footer>
   <script defer src="./chart.js"></script>
 
 </body>
