css, responsive, diagram laser beam

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -37,7 +37,7 @@
         <h2 class="sectionTitle">Particle Accelerator</h2>
         <label class="diagramLabelBeamSource">Beam Source: Pending</label>
         <label class="diagramLabelBeamStatus">Beam Status: Pending</label>
-        <img src="./public/animated_diagram.svg" class="diagram-img" />
+        <img src="./public/graphic_none.svg" class="diagram-img" />
       </div>
     </section>
 
@@ -60,6 +60,48 @@
             <th>Units</th>
           </thead>
           <tbody>
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
+            <tr class="dummyTable">
+              <td></td>
+            </tr>
           </tbody>
         </table>
         <div class="smallContainer" id="twitterWidget" style="overflow: scroll;">
@@ -70,7 +112,9 @@
       </div>
       </div>
       <!-- END DATA information -->
-      <canvas id="myChart" height="100%" width="auto"></canvas>
+      <div class="chartContainer">
+        <canvas id="myChart" height="95%" width="auto"></canvas>
+      </div>
     </section>
     </section>
 
