--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -104,7 +104,7 @@
             </tr>
           </tbody>
         </table>
-        <div class="smallContainer" id="twitterWidget" style="overflow: scroll;">
+        <div class="smallContainer" id="twitterWidget">
           <a class="twitter-timeline" href="https://twitter.com/crjcharles?ref_src=twsrc%5Etfw"
             style="height:100%">Tweets by crjcharles</a>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
