chart adjustment, slideshow beta

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -32,8 +32,14 @@
   <main>
 
     <!-- diagram Image -->
-    <section>
-      <div class="imageLabelContainer">
+    <section class="slideshow" >
+      <!-- PPT images -->
+      <!-- <img class="slide" src="./public/MCSI.png" alt="Multi-Charge">
+      <img class="slide" src="./public/SIS.png" alt="Simple-Charge">
+      <img class="slide" src="./public/MWS.png" alt="Microwave-Charge"> -->
+
+      <!-- END PPT images -->
+      <div class="imageLabelContainer slide">
         <h2 class="sectionTitle">Particle Accelerator</h2>
         <label class="diagramLabelBeamSource">Beam Source: Pending</label>
         <label class="diagramLabelBeamStatus">Beam Status: Pending</label>
@@ -123,7 +129,9 @@
     <!-- END status information -->
   </main>
   <footer><a href="https://github.com/Filet26/TRIUMF_442_HLA_2">Created by a team of students at BCIT</footer>
+    <!-- <script defer src="./slideshow.js"></script> -->
   <script defer src="./chart.js"></script>
+  
 
 </body>
 
