fixed title OLIS

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -24,7 +24,7 @@
     <nav>
       <img src="./public/main-logo.png" class="logo" />
       <p class="navText">
-        Off-Line Ion Source (OLIS)
+        Off-Line Ion Sources (OLIS) Facility
       </p>
       <h2 class="time"></h2>
     </nav>
@@ -32,7 +32,7 @@
   <main>
 
     <!-- diagram Image -->
-    <section class="slideshow" >
+    <section class="slideshow">
       <!-- PPT images -->
       <!-- <img class="slide" src="./public/MCSI.png" alt="Multi-Charge">
       <img class="slide" src="./public/SIS.png" alt="Simple-Charge">
@@ -129,9 +129,9 @@
     <!-- END status information -->
   </main>
   <footer><a href="https://github.com/Filet26/TRIUMF_442_HLA_2">Created by a team of students at BCIT</footer>
-    <!-- <script defer src="./slideshow.js"></script> -->
+  <!-- <script defer src="./slideshow.js"></script> -->
   <script defer src="./chart.js"></script>
-  
+
 
 </body>
 
