centered the div

--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -49,9 +49,7 @@
 
     <!-- End Diagram Image -->
 
-    <!-- Sneaky Data -->
-    <div id="graph_data"></div>
-    <!-- END Sneaky Data -->
+
 
 
 
@@ -128,7 +126,11 @@
 
     <!-- END status information -->
   </main>
-  <footer><a href="https://github.com/Filet26/TRIUMF_442_HLA_2">Created by a team of students at BCIT</footer>
+  <footer><a href="https://github.com/Filet26/TRIUMF_442_HLA_2">Created by a team of students at BCIT
+      <!-- Sneaky Data -->
+      <div id="graph_data"></div>
+      <!-- END Sneaky Data -->
+  </footer>
   <!-- <script defer src="./slideshow.js"></script> -->
   <script defer src="./chart.js"></script>
 
