--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -33,17 +33,13 @@
 
     <!-- diagram Image -->
     <section class="slideshow">
-      <!-- PPT images -->
-      <!-- <img class="slide" src="./public/MCSI.png" alt="Multi-Charge">
-      <img class="slide" src="./public/SIS.png" alt="Simple-Charge">
-      <img class="slide" src="./public/MWS.png" alt="Microwave-Charge"> -->
-
-      <!-- END PPT images -->
       <div class="imageLabelContainer slide">
-        <h2 class="sectionTitle">Particle Accelerator</h2>
-        <label class="diagramLabelBeamSource">Beam Source: Pending</label>
-        <label class="diagramLabelBeamStatus">Beam Status: Pending</label>
-        <img src="./public/graphic_none.svg" class="diagram-img" />
+        <img class="slide1" src="./public/MCSI.png" alt="Multi-Charge" style="display: none;">
+        <img class="slide2" src="./public/SIS.png" alt="Simple-Charge" style="display: none;">
+        <img class="slide3" src="./public/MWS.png" alt="Microwave-Charge" style="display: none;">
+        <label class="diagramLabelBeamSource slide4">Beam Source: Pending</label>
+        <label class="diagramLabelBeamStatus slide4">Beam Status: Pending</label>
+        <img src="./public/graphic_none.svg" class="diagram-img slide4" />
       </div>
     </section>
 
