--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -34,9 +34,9 @@
     <!-- diagram Image -->
     <section class="slideshow">
       <div class="imageLabelContainer slide">
-        <img class="slide1" src="./public/MCSI.png" alt="Multi-Charge" style="display: none;">
-        <img class="slide2" src="./public/SIS.png" alt="Simple-Charge" style="display: none;">
-        <img class="slide3" src="./public/MWS.png" alt="Microwave-Charge" style="display: none;">
+        <img class="slide1 slideimg" src="./public/MCIS-SLIDE.png" alt="Multi-Charge" style="display: none;">
+        <img class="slide2 slideimg" src="./public/SIS-SLIDE.png" alt="Simple-Charge" style="display: none;">
+        <img class="slide3 slideimg" src="./public/MWS-SLIDE.png" alt="Microwave-Charge" style="display: none;">
         <label class="diagramLabelBeamSource slide4">Beam Source: Pending</label>
         <label class="diagramLabelBeamStatus slide4">Beam Status: Pending</label>
         <img src="./public/graphic_none.svg" class="diagram-img slide4" />
@@ -138,8 +138,7 @@
       <div id="graph_data"></div>
       <!-- END Sneaky Data -->
 
-  </footer>
-  <!-- <script defer src="./slideshow.js"></script> -->
+    </footer>
   <script defer src="./chart.js"></script>
 
 
